# sage

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
app/components/: __init__.py  allocator.py  education.py  execution.py  header.py  layers.py  meta.py  portfolios.py  results.py  risk.py  strategies.py  universe.py
app/config/: defaults.py
app/meta_allocator_ui/: __init__.py  fixed_weight.py  registry.py  risk_parity.py
app/portfolio_allocator_ui/: __init__.py  inverse_vol.py  registry.py
app/strategy_ui/: __init__.py  meanrev.py  passthrough.py  registry.py  trend.py
app/utils/: charts.py  formatters.py  palette.py  validators.py
cache/systems/: .gitkeep
configs/presets/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PHASE_3_PLAN.md  ROADMAP.md  execution_model.md
sage_core/: __init__.py
sage_core/allocators/: __init__.py  inverse_vol_v1.py
sage_core/cache/: __init__.py
sage_core/config/: __init__.py  system_config.py
sage_core/data/: __init__.py  cache.py  loader.py  yfinance_loader.py
sage_core/execution/: __init__.py  module.py  policy.py
sage_core/meta/: __init__.py  base.py  fixed_weight.py  risk_parity.py
sage_core/metrics/: performance.py
sage_core/portfolio/: __init__.py  constructor.py  risk_caps.py  vol_targeting.py
sage_core/strategies/: __init__.py  base.py  meanrev.py  passthrough.py  passthrough_v1.py  trend.py
sage_core/utils/: constants.py  paths.py  trading_calendar.py  warmup.py
sage_viz/: __init__.py
scripts/: __init__.py  generate_sample_data.py  run_single_backtest.py  test_real_data_integration.py  test_warmup_integration.py
tests/: __init__.py  conftest.py  test_allocators.py  test_app_smoke.py  test_cache.py  test_cap_modes.py  test_charts.py  test_config.py  test_data_loader.py  test_execution.py  test_fixtures.py  test_formatters.py  test_meanrev_strategy.py  test_meta_allocators.py  test_metrics.py  test_passthrough_strategy.py  test_portfolio_constructor.py  test_risk_caps.py  test_strategies.py  test_strategy_base.py  test_streamlit_config.py  test_trend_strategy.py  test_utils.py  test_validators.py  test_vol_targeting.py  test_walkforward.py  test_warmup.py  test_warmup_integration.py  test_yfinance_loader.py
(+4 files in other folders)
