[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage"
version = "0.1.0"
description = "Sage: Systematic Trading Research Platform and Walkforward Backtesting Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lukas Dendrolivanos"}
]
keywords = ["trading", "backtesting", "systematic", "portfolio", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    
    "yfinance>=0.2.0",
    
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "pandas_market_calendars>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    
    "pandas-stubs>=2.0.0",
]

[project.scripts]
sage-app = "scripts.run_app:main"

[tool.setuptools.packages.find]
include = ["sage_core*", "sage_viz*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   
    "W",   
    "F",   
    "I",   
    "B",   
    "C4",  
    "UP",  
]
ignore = [
    "E501",  
    "B008",  
    "C901",  
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  
ignore_missing_imports = true
